<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prflStngs"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/profileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:ignore="MissingConstraints" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/show_age"
        android:textOff="@string/disable"
        android:textOn="@string/enable"
        app:layout_constraintTop_toBottomOf="@id/profileText"
        tools:ignore="UnknownId,DuplicateClickableBoundsCheck"
        tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_sign_in"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textOff="@string/connect_to_facebook"
            android:textOn="@string/disconnect_facebook"
            app:layout_constraintTop_toBottomOf="@id/switchAge"
            tools:ignore="UnknownId"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ntfStng"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/prflStngs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ntf"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/on_messages"
            android:textOff="@string/disable"
            android:textOn="@string/enable"
            tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/on_profile_views"
            android:textOff="@string/disable"
            android:textOn="@string/enable"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prvcyStng"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/ntfStng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign out"
        android:onClick="signOut"
        app:layout_constraintTop_toBottomOf="@id/prvcyStng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
